[project]
name = "Lareta"
version = ""
description = ""
authors = [
    {name = "BlueGlassBlock", email = "blueglassblock@outlook.com"},
    {name = "GreyElaina", email = "GreyElaina@outlook.com"},
    {name = "ProgramRipper", email = "programripper@foxmail.com"},
    {name = "RF-Tar-Railt", email = "3165388245@qq.com"},
]
dependencies = [
    "graia-ariadne[full]>=0.7.14,<0.8.0",
    "sqlmodel>=0.0.6",
    "aiosqlite>=0.17.0",
]
requires-python = ">=3.10"
license = {text = "AGPL-3.0-only"}
[project.optional-dependencies]

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "isort>=5.10.1",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
